--- a/base-6.css
+++ b/base-6.css
@@ -154,12 +154,11 @@ ul li, ol li {
 
 /* ==== TEXT BOXES ==== */
 
-.important-note-1 { 
-    margin: 42px 0 42px 0;
-    padding: 14px 14px 24px 14px;
-    border-style: solid;
-    border-width: 3px;
-    border-radius: 10px
+.important-note-1 {  
+        margin: 42px 0 42px 0;
+        padding: 14px 14px 14px 14px;
+        border-style: solid;
+        border-width: 1px
 }
 
 .important-note-1 h3 { margin-top: 0 }
@@ -168,10 +167,12 @@ ul li, ol li {
 
 .important-note-2 { 
     margin: 42px 0 42px 0;
-    padding: 14px 14px 24px 14px;
-    border-style: solid;
-    border-width: 3px;
-    border-radius: 10px
+      padding: 14px 0 14px 0;
+      border-style: solid;
+      border-top-width: 8px;
+      border-bottom-width: 4px;
+      border-left-width: 0;
+      border-right-width: 0
 }
 
 .important-note-2 h3 { margin-top: 0 }
@@ -181,10 +182,12 @@ ul li, ol li {
 
 .important-note-3 { 
     margin: 42px 0 42px 0;
-    padding: 14px 14px 24px 14px;
+    padding: 14px 14px 20px 14px;
     border-style: solid;
-    border-width: 3px;
-    border-radius: 10px
+    border-top-width: 0;
+    border-bottom-width: 0;
+    border-left-width: 20px;
+    border-right-width: 0
 }
 
 .important-note-3 h3 { margin-top: 0 }
