--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,8 +6,8 @@ img { width: 100%; height: auto; display: block }
 html { scroll-behavior: smooth; scroll-padding-top: 72px }
 
 /* Default font and colours */
-body { font-family: 'Roboto', sans-serif; }
-h1, h2, h3 { color: blue }
+body { font-family: 'Rubik', sans-serif; }
+h1, h2, h3 {color: #319183;}
 p, li { color: #0e0d11 }
 .bg-pastel-green { background-color: rgb(227,250,245) }
 .bg-pastel-grey-blue { background-color: #edf5f9 }
@@ -766,7 +766,7 @@ img.image-circle {
 .container-footer { 
     text-align: center;
     color:#fff;
-    background-color:rgb(36,64,84);
+    background-color:#319183;
 }
 
 /* Desktop footer - inside padding  */
@@ -803,7 +803,7 @@ img.image-circle {
     font-family: sans-serif;
     font-weight: normal;
     font-style:  italic;
-    color: #38a696;
+    color: #fff;
     margin: 0 auto 36px auto;
     font-size: calc(20px + (32 - 20) * ((100vw - 320px)/(1600 - 320)));
 }
