--- a/portfolio/software/assets/css/style.css
+++ b/portfolio/software/assets/css/style.css
@@ -30,9 +30,9 @@ html{ scroll-behavior: smooth;scroll-padding-top: 72px}
     .container-menu-bar-mobile.menu-transparent,
     .container-menu-bar-mobile.menu-light,
     .container-menu-bar-mobile.menu-dark,
-    .flyout-menu.menu-transparent,
-    .flyout-menu.menu-light,
-    .flyout-menu.menu-light { display: none }
+    .flyout-menu.flyout-menu-is-open.menu-transparent,
+    .flyout-menu.flyout-menu-is-open.menu-light,
+    .flyout-menu.flyout-menu-is-open.menu-light { display: none }
 }
 
 /* sticks menu to top of desktop and/or mobile screen */
@@ -177,7 +177,7 @@ html{ scroll-behavior: smooth;scroll-padding-top: 72px}
     right: -320px; /* hides flyout menu */
 }
 
-.flyout-menu.flyout-menu-is-open {
+.flyout-menu {
     right: 0; /* displays flyout menu */
     overscroll-behavior: contain;
     overscroll-behavior-y: contain
